# kpca-gesture-identifier

./: .gitignore  CMakeLists.txt  GestureTracker.py  InterpolateTracker.py  Interpolater.py  KPCA.py  LICENSE  Point.py  README.md  Tracker.py  package.xml  setup.py
data/: gestures.yaml
data/L/: 1.npy  1.npy_  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy
data/L/Trial_1/: 14.npy  15.npy  17.npy  18.npy  2.npy  4.npy  9.npy
data/L/Trial_2/: 1.npy  12.npy  13.npy  14.npy  16.npy  18.npy  19.npy  2.npy  20.npy  5.npy  6.npy
data/L/Trial_3/: 1.npy  10.npy  14.npy  20.npy  3.npy  4.npy  5.npy  6.npy  7.npy  9.npy
data/N/: 1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy
data/N/Trial_1/: 16.npy  18.npy  5.npy  6.npy  8.npy
data/N/Trial_2/: 11.npy  14.npy  17.npy  2.npy  3.npy  4.npy  7.npy  9.npy
data/N/Trial_3/: 10.npy  11.npy  12.npy  15.npy  16.npy  18.npy  19.npy  5.npy  6.npy  7.npy  9.npy
data/O/: 1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy
data/O/Trial_1/: 1.npy  10.npy  16.npy  7.npy  9.npy
data/O/Trial_2/: 1.npy  12.npy  14.npy  15.npy  18.npy  19.npy  8.npy
data/O/Trial_3/: 1.npy  12.npy  13.npy  14.npy  15.npy  17.npy  3.npy  5.npy  7.npy  8.npy
data/R/: 1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy
data/R/Trial_1/: 1.npy  (+3 more)
data/S/: 1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy
data/W/: 1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy
degenerate_data/: gestures.yaml
launch/: kinect.launch  mouse.launch
nodes/: BlobTrackerNode  MouseTrackerNode  MouseTrackerNode.py  NormalizedTrajectoryMatcherNode  NormalizedTrajectoryMatcherNode.py  TrajectoryNormalizerNode  TrajectoryNormalizerNode.py  TrajectorySaverNode  TrajectorySaverNode.py
report/: bibliography.bib  main.tex
src/kpca_gesture_identifier/: CrossValidation.py  GestureTracker.py  InterpolateTracker.py  Interpolater.py  KPCA.py  KinectOnMouseDataValidation.py  Point.py
(+1026 files in other folders)
