<?xml version="1.0"?>
<package>
    <name>kpca_gesture_identifier</name>
    <version>0.0.0</version>
    <description>The kpca_gesture_identifier package</description>

    <maintainer email="rtzoeller@rtzoeller.com">Ryan Zoeller</maintainer>

    <license>All Rights Reserved</license>

    <author email="rtzoeller@rtzoeller.com">Ryan Zoeller</author>


    <!-- The *_depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <!-- Examples: -->
    <!-- Use build_depend for packages you need at compile time: -->
    <!--     <build_depend>message_generation</build_depend> -->
    <!-- Use buildtool_depend for build tool packages: -->
    <!--     <buildtool_depend>catkin</buildtool_depend> -->
    <!-- Use run_depend for packages you need at runtime: -->
    <!--     <run_depend>message_runtime</run_depend> -->
    <!-- Use test_depend for packages you need only for testing: -->
    <!--     <test_depend>gtest</test_depend> -->
    <buildtool_depend>catkin</buildtool_depend>

    <export>
    </export>
</package>
