<?xml version="1.0"?>
<package>
    <name>kpca_gesture_identifier</name>
    <version>0.0.0</version>
    <description>The kpca_gesture_identifier package</description>

    <maintainer email="rtzoeller@rtzoeller.com">Ryan Zoeller</maintainer>

    <license>All Rights Reserved</license>

    <author email="rtzoeller@rtzoeller.com">Ryan Zoeller</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>

    <export>
    </export>
</package>
